Closed Bug 42045 Opened 25 years ago Closed 25 years ago

oninput not getting fired on textfields: "open web location", subscribe typedown, ab card have problems

Categories

(SeaMonkey :: UI Design, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: doronr, Assigned: mjudge)

References

Details

(Keywords: regression, Whiteboard: [nsbeta2+])

In file|open web location, the open button is always greyed out. You can open a new location in the current window by clicking on it, but not open one in a new window (i get ***foopy in the console when it closes)
doron, what's the build # for this? and i presume this on the m17 trunk bits, yes? (sorry, i'm not paying attention to irc this second, so i might be missing the relevant info. :-) anyhow, i'm unable to repro this on linux, 2000.06.09.08-m17 trunk (opt commercial). currently installing m17 on NT and Mac...
temporary solution right now for the Open button always being disabled problem is to fire DoEnabling() on the onkeypress event of the textfield, since for whatever reason, oninput is no longer being fired while typing in the textfield. However, this is only temporary because onkeypress won't fire when using, say, the paste command in the context menu (if those are ever hooked up). what's up with oninput?
i don't see this on mac or linux, so adding pp kw. on winnt (using 2000.06.09.08-m17, opt comm bits), the Open button does remain greyed-out, but it is still clickable (odd).
Assignee: don → law
Keywords: pp
oops, build 2000060908, m17 branch, win98
seems to be working ok in m16. adding regression keyboard
Keywords: regression
the oninput event of the textfield never seems to fire; I don't know if this is a general problem with oninput or not. This works fine with onkeypress, but as I said earlier, we'll have problems later on when textfield context menus are hooked up. I looked at the way the "Find in this Page" dialog handles it, and it seems to use onkeypress to enable the Find button...methinks a separate bug needs to be filed on that, since when textfield context menus land, the Find button won't enable upon clipboard operations (esp. paste).
ah. this appears to be an ender lite issue, since that's turned on in today's windows builds - that explains why this is pp win32. cc'ing mjudge, owner of enderlite
I just logged a similar bug on the "oninput" problem. #42077
updating summary. re-assign to mr. ender lite. add nsbeta2
Assignee: law → mjudge
Keywords: nsbeta2
Summary: "open web location" open button greyed out always → oninput not getting fired on textfields: "open web location", subscribe typedown, ab card have problems
*** Bug 42077 has been marked as a duplicate of this bug. ***
*** Bug 42077 has been marked as a duplicate of this bug. ***
adding me (subscribe regression) adding putterman (ab card regression)
Component: XP Apps → XP Apps: GUI Features
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
*** Bug 42431 has been marked as a duplicate of this bug. ***
mjudge, did you just fix this? looking at your checkin comments, this might be fixed.
Mike, I see you checked in with the following description: handling of on input. adding selection change notifications to commands. we must tell the document when selection happens in the input fields. regriession from 34986, r=saari a=pdt+ I'm not sure why all your checkins today referred to bug 34986, a totally unrelated bug, but isn't this fixed now?
seth...yer always one step ahead of me!
setting to m16, where + bugs live
Target Milestone: --- → M16
Blocks: 43279
i see this on all platforms on latest build 2000-06-21-08-M17 commercial
OS: Windows 98 → All
Hardware: PC → All
M16 has been out for a while now, these bugs target milestones need to be updated.
good catch, Alek --thx! removing pp since it's now all/all. (a regression of a regression...)
Keywords: pp
This bug blocked bug 41362, without this bug fix, I cannot verify bug 41362.
moving over to m17, adjusted priority and severity
Severity: normal → critical
Priority: P3 → P1
Target Milestone: M16 → M17
fixed. The listeners for each ender lite only register themselves on focus and unregister on blur. Thus you dont have N many ender lites all checking to see if it was their respective change that needs to be broadcast. pretty slick eh? The "best" way is probably to have the editor do something smart and only listen to the document for other progromatic changes, but that wont be done right now. It also might not be correct. the way I have done it may be a little excessive but that may be the only way. me sleep now.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verif fixed on linux and mac commercial, 2000.06.29.08, and winnt mozilla [same build id].
Status: RESOLVED → VERIFIED
*** Bug 43838 has been marked as a duplicate of this bug. ***
Can somebody confirm that this bug has been fixed completely or not since I am still seeing problem as following: By using today's 07-06-09-M17 commercial build for verifying subscribe dialog for newsgroups and IMAP folders: It seems that seamonkey still having problem for selecting IMAP folders from the subscribe dialog, when I select one specific IMAP folder from the subscribe dialog, I am still seeing that it is displaying multiple selecting/highlights from the subscribe dialog......(see bug 41362 comments)
*** Bug 52631 has been marked as a duplicate of this bug. ***
i still see this bug, regardless of window manager setting in Sawmill. can someone alse confirm on other platforms? Build 2000091408 - Linux
i don't see this on linux, mac os 9.0 or winnt using 2000.09.15.08/9 opt comm bits.
Product: Core → Mozilla Application Suite
Component: XP Apps: GUI Features → UI Design
You need to log in before you can comment on or make changes to this bug.