oninput and on change now firing. this should be working completely now. bug 42045 uncommenting out lines that I had commented out for someone on accident. also this fixes listeners not firing for textareas and only for text inputs. pdt+dogfood+ ect.